Changes: Do not support custom instance environment(rename: stage) rule, set the rule to 'development\|testing\|acceptance\|production'. (#76)
* Wait for etcd server ready when SC startup in proxy mode.

* Optimize code.

* Support install patches.

* Optimize log print in SSL mode.

* Support install patches.

* Optimize log print in SSL mode.

* Change key design.

* Optimize log print.

* Gofmt codes.

* Support RULE/TAG/DEPS cache store.

* Giving priority to cache in Query TAG/RULE/DEPENDENCY.

* Lost event of instance when service rule is changed.

* Set http client util default timeout.

* Set the http client default timeout.

* Set the http client default timeout.

* New key design.

* Optimize code.

* Optimize code.

* Optimize code.

* Optimize string concat function.

* Optimize string 'concat' and 'convert' function.

* Optimize context.

* Optimize ROA.

* Optimize lager, register instance. Fixed limiter concurrent bug.

* Optimize core package.

* Optimize create service.

* Optimize create service.

* Optimize create service.

* Optimize create service.

* Optimize create service.

* Fixed some bugs.

* Optimize code.

* Support install patches.

* Optimize log print in SSL mode.

* Change key design.

* Optimize log print.

* Gofmt codes.

* Support RULE/TAG/DEPS cache store.

* Giving priority to cache in Query TAG/RULE/DEPENDENCY.

* Lost event of instance when service rule is changed.

* New key design.

* Optimize code.

* Optimize code.

* Optimize code.

* Optimize string concat function.

* Optimize string 'concat' and 'convert' function.

* Optimize context.

* Optimize ROA.

* Optimize lager, register instance. Fixed limiter concurrent bug.

* Optimize core package.

* Optimize create service.

* Optimize create service.

* Optimize create service.

* Optimize create service.

* Optimize create service.

* Fixed some bugs.

* Opti
